it compiles (+ sonar violations fixes)